베이스라인 + 밸런스 + 하이퍼파라미터 조정 + 앙상블(LGBM + XGB)

--- a/베이스_라인_[public__0_55813].ipynb
+++ b/베이스_라인_[public__0_55813].ipynb
@@ -85,7 +85,7 @@
         "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n",
-        "\n",
+        "from xgboost import XGBClassifier\n",
         "from lightgbm import LGBMClassifier\n",
         "from sklearn.model_selection import StratifiedKFold\n",
         "from sklearn.metrics import f1_score"
@@ -983,6 +983,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from xgboost import XGBClassifier\n",
         "# 결과 저장\n",
         "binary_preds = {}\n",
         "multiclass_pred = None\n",
@@ -999,24 +1000,62 @@
         "    'verbosity': -1\n",
         "}\n",
         "\n",
-        "\n",
-        "# 이진 분류 학습\n",
+        "# ✅ 이진 분류 학습 (LightGBM + XGBoost 앙상블)\n",
         "for col in targets_binary:\n",
         "    y = train_df[col]\n",
-        "    model = LGBMClassifier(**common_params, class_weight='balanced')\n",
-        "    model.fit(X, y)\n",
-        "    binary_preds[col] = model.predict(test_X)  # 🔥 확률X, 클래스 직접 예측\n",
         "\n",
-        "# 다중 분류 학습 (S1)\n",
+        "    model_lgb = LGBMClassifier(**common_params, class_weight='balanced')\n",
+        "    model_xgb = XGBClassifier(\n",
+        "        n_estimators=1500,\n",
+        "        learning_rate=0.02,\n",
+        "        max_depth=7,\n",
+        "        subsample=0.8,\n",
+        "        colsample_bytree=0.8,\n",
+        "        random_state=42,\n",
+        "        n_jobs=-1,\n",
+        "        use_label_encoder=False,\n",
+        "        eval_metric='logloss'\n",
+        "    )\n",
+        "\n",
+        "    model_lgb.fit(X, y)\n",
+        "    model_xgb.fit(X, y)\n",
+        "\n",
+        "    # soft voting\n",
+        "    prob_lgb = model_lgb.predict_proba(test_X)[:, 1]\n",
+        "    prob_xgb = model_xgb.predict_proba(test_X)[:, 1]\n",
+        "    prob_avg = (prob_lgb + prob_xgb) / 2\n",
+        "\n",
+        "    binary_preds[col] = (prob_avg > 0.5).astype(int)\n",
+        "\n",
+        "# ✅ 다중 분류 학습 (S1, 앙상블)\n",
         "y_multi = train_df['S1']\n",
-        "model_s1 = LGBMClassifier(**common_params, objective='multiclass', num_class=3)\n",
-        "model_s1.fit(X, y_multi)\n",
-        "multiclass_pred = model_s1.predict(test_X)  # 🔥 클래스 직접 예측"
+        "\n",
+        "model_lgb_s1 = LGBMClassifier(**common_params, objective='multiclass', num_class=3)\n",
+        "model_xgb_s1 = XGBClassifier(\n",
+        "    objective='multi:softprob',\n",
+        "    num_class=3,\n",
+        "    n_estimators=1500,\n",
+        "    learning_rate=0.02,\n",
+        "    max_depth=7,\n",
+        "    subsample=0.8,\n",
+        "    colsample_bytree=0.8,\n",
+        "    random_state=42,\n",
+        "    n_jobs=-1,\n",
+        ")\n",
+        "\n",
+        "model_lgb_s1.fit(X, y_multi)\n",
+        "model_xgb_s1.fit(X, y_multi)\n",
+        "\n",
+        "prob_lgb = model_lgb_s1.predict_proba(test_X)\n",
+        "prob_xgb = model_xgb_s1.predict_proba(test_X)\n",
+        "prob_avg = (prob_lgb + prob_xgb) / 2\n",
+        "\n",
+        "multiclass_pred = np.argmax(prob_avg, axis=1)"
       ],
       "metadata": {
         "id": "oKpKyAngzkQ4"
       },
-      "execution_count": 53,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -1040,9 +1079,9 @@
           "height": 1000
         },
         "id": "-J3OYiyHlXjV",
-        "outputId": "aed6cf2a-ca4a-4cef-bcdb-246432a22b2f"
+        "outputId": "274ff77d-adca-4918-c738-365faf16da83"
       },
-      "execution_count": 54,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1094,9 +1133,9 @@
           "height": 17
         },
         "id": "oQ7h8rOd1H6o",
-        "outputId": "ad19db7c-917b-44aa-e8be-f74a8a956435"
+        "outputId": "09768161-c44c-4bef-c162-fc5e34c7f245"
       },
-      "execution_count": 55,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1157,7 +1196,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_d9077e57-fcb5-450b-8e9a-ba6d3a2a2a79\", \"submission_final.csv\", 9803)"
+              "download(\"download_d6d741f0-80f9-442c-a9ad-274559ad4519\", \"submission_final.csv\", 9803)"
             ]
           },
           "metadata": {}
