최고성능 +  캣부스트 피처 110까지 + 이진분류 주석처리

--- a/베이스_라인_[public__0_55813].ipynb
+++ b/베이스_라인_[public__0_55813].ipynb
@@ -1087,10 +1087,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "3dc5cc36-60f8-437e-8f0e-167b37f7a9ec",
+        "outputId": "78b8f7b1-9b87-461f-cf79-add49b2054d0",
         "collapsed": true
       },
-      "execution_count": 73,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1175,17 +1175,17 @@
           "name": "stdout",
           "text": [
             "126\n",
-            "0:\tlearn: 1.0912297\ttotal: 111ms\tremaining: 1m 51s\n",
-            "100:\tlearn: 0.7800458\ttotal: 6.15s\tremaining: 54.7s\n",
-            "200:\tlearn: 0.6251563\ttotal: 13.4s\tremaining: 53.3s\n",
-            "300:\tlearn: 0.4950845\ttotal: 19.7s\tremaining: 45.7s\n",
-            "400:\tlearn: 0.3942874\ttotal: 27.1s\tremaining: 40.5s\n",
-            "500:\tlearn: 0.3224294\ttotal: 33.3s\tremaining: 33.1s\n",
-            "600:\tlearn: 0.2655922\ttotal: 39.1s\tremaining: 26s\n",
-            "700:\tlearn: 0.2235437\ttotal: 46.4s\tremaining: 19.8s\n",
-            "800:\tlearn: 0.1906688\ttotal: 52.5s\tremaining: 13s\n",
-            "900:\tlearn: 0.1643183\ttotal: 60s\tremaining: 6.59s\n",
-            "999:\tlearn: 0.1441062\ttotal: 1m 5s\tremaining: 0us\n"
+            "0:\tlearn: 1.0912297\ttotal: 107ms\tremaining: 1m 47s\n",
+            "100:\tlearn: 0.7800458\ttotal: 7.69s\tremaining: 1m 8s\n",
+            "200:\tlearn: 0.6251563\ttotal: 13.3s\tremaining: 53s\n",
+            "300:\tlearn: 0.4950845\ttotal: 21s\tremaining: 48.8s\n",
+            "400:\tlearn: 0.3942874\ttotal: 26.7s\tremaining: 39.8s\n",
+            "500:\tlearn: 0.3224294\ttotal: 33.9s\tremaining: 33.8s\n",
+            "600:\tlearn: 0.2655922\ttotal: 39.8s\tremaining: 26.4s\n",
+            "700:\tlearn: 0.2235437\ttotal: 47s\tremaining: 20s\n",
+            "800:\tlearn: 0.1906688\ttotal: 53.7s\tremaining: 13.3s\n",
+            "900:\tlearn: 0.1643183\ttotal: 59.4s\tremaining: 6.52s\n",
+            "999:\tlearn: 0.1441062\ttotal: 1m 7s\tremaining: 0us\n"
           ]
         }
       ]
@@ -1214,10 +1214,10 @@
           "height": 1000
         },
         "id": "-J3OYiyHlXjV",
-        "outputId": "6ee7406a-bbd6-4d21-d356-85929271599a",
+        "outputId": "2f63249c-6dbe-429d-9166-39e42bc11833",
         "collapsed": true
       },
-      "execution_count": 72,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1244,7 +1244,7 @@
         "#중요도 낮은 것들 빼고 선수 입장~!\n",
         "#S1 재학습 드가자\n",
         "# 3. 상위 N개 피처 선택\n",
-        "top_n = 120\n",
+        "top_n = 110\n",
         "top_features_s1 = feature_importance['feature'].head(top_n).tolist()\n",
         "\n",
         "# 4. 선택한 피처로 재학습\n",
@@ -1268,25 +1268,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H6q3lmUBRmk9",
-        "outputId": "d1540b36-9292-44e6-cb83-f4616792e8cf"
+        "outputId": "8b6fb328-9c5b-41b6-9872-5238ecdb47f5"
       },
-      "execution_count": 68,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0:\tlearn: 1.0918911\ttotal: 145ms\tremaining: 2m 25s\n",
-            "100:\tlearn: 0.7793498\ttotal: 7.88s\tremaining: 1m 10s\n",
-            "200:\tlearn: 0.6242684\ttotal: 13.6s\tremaining: 54s\n",
-            "300:\tlearn: 0.4934640\ttotal: 21.4s\tremaining: 49.6s\n",
-            "400:\tlearn: 0.3942577\ttotal: 26.9s\tremaining: 40.1s\n",
-            "500:\tlearn: 0.3232167\ttotal: 34.4s\tremaining: 34.2s\n",
-            "600:\tlearn: 0.2702298\ttotal: 39.9s\tremaining: 26.5s\n",
-            "700:\tlearn: 0.2256753\ttotal: 47.4s\tremaining: 20.2s\n",
-            "800:\tlearn: 0.1938191\ttotal: 53s\tremaining: 13.2s\n",
-            "900:\tlearn: 0.1668929\ttotal: 1m\tremaining: 6.64s\n",
-            "999:\tlearn: 0.1441067\ttotal: 1m 5s\tremaining: 0us\n"
+            "0:\tlearn: 1.0926274\ttotal: 75.6ms\tremaining: 1m 15s\n",
+            "100:\tlearn: 0.7773122\ttotal: 7.22s\tremaining: 1m 4s\n",
+            "200:\tlearn: 0.6191442\ttotal: 13.6s\tremaining: 54.1s\n",
+            "300:\tlearn: 0.4908297\ttotal: 19.5s\tremaining: 45.3s\n",
+            "400:\tlearn: 0.3872456\ttotal: 26.5s\tremaining: 39.6s\n",
+            "500:\tlearn: 0.3141954\ttotal: 32s\tremaining: 31.9s\n",
+            "600:\tlearn: 0.2584512\ttotal: 39.6s\tremaining: 26.3s\n",
+            "700:\tlearn: 0.2164557\ttotal: 45.1s\tremaining: 19.2s\n",
+            "800:\tlearn: 0.1835057\ttotal: 52.7s\tremaining: 13.1s\n",
+            "900:\tlearn: 0.1582008\ttotal: 58.9s\tremaining: 6.48s\n",
+            "999:\tlearn: 0.1383208\ttotal: 1m 6s\tremaining: 0us\n"
           ]
         }
       ]
@@ -1294,28 +1294,28 @@
     {
       "cell_type": "code",
       "source": [
-        "#이번엔 Q1 Q2 Q3 S2 S3 드가자\n",
+        "# #이번엔 Q1 Q2 Q3 S2 S3 드가자\n",
         "\n",
-        "# 재학습 결과 저장\n",
-        "binary_preds_refined = {}\n",
+        "# # 재학습 결과 저장\n",
+        "# binary_preds_refined = {}\n",
         "\n",
-        "for col in targets_binary:\n",
-        "    y = train_df[col]\n",
+        "# for col in targets_binary:\n",
+        "#     y = train_df[col]\n",
         "\n",
-        "    # 해당 타겟에 대한 중요도 상위 120개 피처만 사용\n",
-        "    top_features_binary = all_feature_importances[col]['feature'].head(top_n).tolist()\n",
-        "    X_top = X[top_features_binary]\n",
-        "    test_X_top = test_X[top_features_binary]\n",
+        "#     # 해당 타겟에 대한 중요도 상위 120개 피처만 사용\n",
+        "#     top_features_binary = all_feature_importances[col]['feature'].head(top_n).tolist()\n",
+        "#     X_top = X[top_features_binary]\n",
+        "#     test_X_top = test_X[top_features_binary]\n",
         "\n",
-        "    # 재학습\n",
-        "    model = LGBMClassifier(**common_params, class_weight='balanced')\n",
-        "    model.fit(X_top, y)\n",
-        "    binary_preds_refined[col] = model.predict(test_X_top)\n"
+        "#     # 재학습\n",
+        "#     model = LGBMClassifier(**common_params, class_weight='balanced')\n",
+        "#     model.fit(X_top, y)\n",
+        "#     binary_preds_refined[col] = model.predict(test_X_top)\n"
       ],
       "metadata": {
         "id": "8yOqDwfyjfMW"
       },
-      "execution_count": 69,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -1336,12 +1336,18 @@
         "\n",
         "# 다중 분류 예측 붙이기\n",
         "######수정함#######\n",
+        "\n",
         "#submission_final['S1'] = multiclass_pred\n",
         "submission_final['S1'] = multiclass_pred_refined\n",
         "\n",
         "# 이진 분류 결과 붙이기\n",
+        "######수정함#######\n",
+        "\n",
         "for col in ['Q1', 'Q2', 'Q3', 'S2', 'S3']:\n",
-        "    submission_final[col] = binary_preds_refined[col].astype(int)  # 확률 아닌 class 예측\n",
+        "    submission_final[col] = binary_preds[col].astype(int)  # 확률 아닌 class 예측\n",
+        "\n",
+        "# for col in ['Q1', 'Q2', 'Q3', 'S2', 'S3']:\n",
+        "#     submission_final[col] = binary_preds_refined[col].astype(int)  # 확률 아닌 class 예측\n",
         "\n",
         "# 최종 제출 형식 정렬\n",
         "submission_final = submission_final[['subject_id', 'sleep_date', 'lifelog_date', 'Q1', 'Q2', 'Q3', 'S1', 'S2', 'S3']]\n",
@@ -1358,9 +1364,9 @@
           "height": 17
         },
         "id": "oQ7h8rOd1H6o",
-        "outputId": "842d6f51-1e63-406c-9f7d-22c998ebb5aa"
+        "outputId": "ad385ddf-f869-40f6-f8f6-06ac2c5ccb0c"
       },
-      "execution_count": 70,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1421,7 +1427,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_9c5d8ba9-eaea-4e7c-86f2-43d6efb4eb8b\", \"submission_final.csv\", 9803)"
+              "download(\"download_124f38ac-88de-4197-bd5d-ca5591a316b1\", \"submission_final.csv\", 9803)"
             ]
           },
           "metadata": {}
