다중분류 - 캣부스트, feature importance 120. 이진분류 - lgbm, shap 50(현재 최고 성능 0.591)

--- a/베이스_라인_[public__0_55813].ipynb
+++ b/베이스_라인_[public__0_55813].ipynb
@@ -57,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h46RU-gNcEJj",
-        "outputId": "cb70008b-a4a6-4dd1-ba37-f035cb0d2e6f"
+        "outputId": "4db90668-22ed-4f91-a3cd-9f5ebd0957dc"
       },
       "outputs": [
         {
@@ -165,7 +165,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hns0k9zvhGuY",
-        "outputId": "92942f7b-52b4-48a2-e096-37896ca42f67"
+        "outputId": "801792f9-4043-4a9b-dfe2-2fa13c6d2ba7"
       },
       "execution_count": 5,
       "outputs": [
@@ -262,7 +262,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8MPug0C1VY2Z",
-        "outputId": "2128c2d6-1b60-4988-ade1-0f97ed027f5b"
+        "outputId": "883eada2-05a2-4bfb-e95b-ed2d9bd494db"
       },
       "execution_count": 8,
       "outputs": [
@@ -994,7 +994,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "82bZPJJZdY8t",
-        "outputId": "e7de4080-57be-41cb-e00b-d29a31f6c21b"
+        "outputId": "01ec5607-dae4-4d54-84cd-5f1331d8fe72"
       },
       "execution_count": 24,
       "outputs": [
@@ -1023,7 +1023,7 @@
             "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->catboost) (3.2.3)\n",
             "Requirement already satisfied: tenacity>=6.2.0 in /usr/local/lib/python3.11/dist-packages (from plotly->catboost) (9.1.2)\n",
             "Downloading catboost-1.2.8-cp311-cp311-manylinux2014_x86_64.whl (99.2 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m99.2/99.2 MB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m99.2/99.2 MB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: catboost\n",
             "Successfully installed catboost-1.2.8\n"
           ]
@@ -1115,10 +1115,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "8db44cf3-a6af-4c85-f605-a955cef4a3c7",
+        "outputId": "86c1e3f3-ebbf-4e35-d7cc-f7cb4a18d752",
         "collapsed": true
       },
-      "execution_count": 31,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1203,17 +1203,17 @@
           "name": "stdout",
           "text": [
             "🔢 S3 피처 수: 126\n",
-            "0:\tlearn: 1.0912297\ttotal: 164ms\tremaining: 2m 43s\n",
-            "100:\tlearn: 0.7800458\ttotal: 6.81s\tremaining: 1m\n",
-            "200:\tlearn: 0.6251563\ttotal: 12.1s\tremaining: 48s\n",
-            "300:\tlearn: 0.4950845\ttotal: 19.2s\tremaining: 44.7s\n",
-            "400:\tlearn: 0.3942874\ttotal: 24.5s\tremaining: 36.6s\n",
-            "500:\tlearn: 0.3224294\ttotal: 31.8s\tremaining: 31.6s\n",
-            "600:\tlearn: 0.2655922\ttotal: 37.1s\tremaining: 24.6s\n",
-            "700:\tlearn: 0.2235437\ttotal: 47s\tremaining: 20.1s\n",
-            "800:\tlearn: 0.1906688\ttotal: 52.3s\tremaining: 13s\n",
-            "900:\tlearn: 0.1643183\ttotal: 59.1s\tremaining: 6.49s\n",
-            "999:\tlearn: 0.1441062\ttotal: 1m 4s\tremaining: 0us\n"
+            "0:\tlearn: 1.0912297\ttotal: 216ms\tremaining: 3m 35s\n",
+            "100:\tlearn: 0.7800458\ttotal: 5.47s\tremaining: 48.7s\n",
+            "200:\tlearn: 0.6251563\ttotal: 11.6s\tremaining: 46.3s\n",
+            "300:\tlearn: 0.4950845\ttotal: 18.1s\tremaining: 42s\n",
+            "400:\tlearn: 0.3942874\ttotal: 23.5s\tremaining: 35.1s\n",
+            "500:\tlearn: 0.3224294\ttotal: 30.6s\tremaining: 30.5s\n",
+            "600:\tlearn: 0.2655922\ttotal: 35.9s\tremaining: 23.8s\n",
+            "700:\tlearn: 0.2235437\ttotal: 43.1s\tremaining: 18.4s\n",
+            "800:\tlearn: 0.1906688\ttotal: 48.3s\tremaining: 12s\n",
+            "900:\tlearn: 0.1643183\ttotal: 54.7s\tremaining: 6.01s\n",
+            "999:\tlearn: 0.1441062\ttotal: 1m 5s\tremaining: 0us\n"
           ]
         }
       ]
@@ -1230,9 +1230,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yfZbARsfpuNj",
-        "outputId": "d9788815-bbb7-4ac9-bba5-ebb376e8e152"
+        "outputId": "49923e78-d32d-4719-cd1d-895fb761ab5e"
       },
-      "execution_count": 32,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1268,10 +1268,10 @@
           "height": 1000
         },
         "id": "-J3OYiyHlXjV",
-        "outputId": "064cb26e-cf6f-44c6-8f3d-bab7650e8fd8",
+        "outputId": "17bd9d10-4ad8-4810-ac33-24e59070eb8b",
         "collapsed": true
       },
-      "execution_count": 33,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1322,25 +1322,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H6q3lmUBRmk9",
-        "outputId": "29aaac1f-7cc4-49f2-bb9c-3e27094f176b"
+        "outputId": "fd12f37b-19fa-489c-a7d9-627b68116a19"
       },
-      "execution_count": 40,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0:\tlearn: 1.0918911\ttotal: 115ms\tremaining: 1m 54s\n",
-            "100:\tlearn: 0.7793498\ttotal: 8.97s\tremaining: 1m 19s\n",
-            "200:\tlearn: 0.6242684\ttotal: 14.2s\tremaining: 56.6s\n",
-            "300:\tlearn: 0.4934640\ttotal: 20.6s\tremaining: 47.8s\n",
-            "400:\tlearn: 0.3942577\ttotal: 26.6s\tremaining: 39.8s\n",
-            "500:\tlearn: 0.3232167\ttotal: 31.9s\tremaining: 31.8s\n",
-            "600:\tlearn: 0.2702298\ttotal: 39.1s\tremaining: 25.9s\n",
-            "700:\tlearn: 0.2256753\ttotal: 44.4s\tremaining: 18.9s\n",
-            "800:\tlearn: 0.1938191\ttotal: 51.6s\tremaining: 12.8s\n",
-            "900:\tlearn: 0.1668929\ttotal: 56.9s\tremaining: 6.25s\n",
-            "999:\tlearn: 0.1441067\ttotal: 1m 3s\tremaining: 0us\n"
+            "0:\tlearn: 1.0918911\ttotal: 127ms\tremaining: 2m 7s\n",
+            "100:\tlearn: 0.7793498\ttotal: 14.5s\tremaining: 2m 9s\n",
+            "200:\tlearn: 0.6242684\ttotal: 26.8s\tremaining: 1m 46s\n",
+            "300:\tlearn: 0.4934640\ttotal: 40.4s\tremaining: 1m 33s\n",
+            "400:\tlearn: 0.3942577\ttotal: 51.2s\tremaining: 1m 16s\n",
+            "500:\tlearn: 0.3232167\ttotal: 1m 4s\tremaining: 1m 4s\n",
+            "600:\tlearn: 0.2702298\ttotal: 1m 13s\tremaining: 48.8s\n",
+            "700:\tlearn: 0.2256753\ttotal: 1m 18s\tremaining: 33.6s\n",
+            "800:\tlearn: 0.1938191\ttotal: 1m 26s\tremaining: 21.4s\n",
+            "900:\tlearn: 0.1668929\ttotal: 1m 31s\tremaining: 10.1s\n",
+            "999:\tlearn: 0.1441067\ttotal: 1m 38s\tremaining: 0us\n"
           ]
         }
       ]
@@ -1357,7 +1357,7 @@
         "    y = train_df[col]\n",
         "\n",
         "    # 해당 타겟에 대한 중요도 상위 120개 피처만 사용\n",
-        "    top_features_binary = all_feature_importances[col]['feature'].head(90).tolist()\n",
+        "    top_features_binary = all_feature_importances[col]['feature'].head(50).tolist()\n",
         "    X_top = X[top_features_binary]\n",
         "    test_X_top = test_X[top_features_binary]\n",
         "\n",
@@ -1369,7 +1369,7 @@
       "metadata": {
         "id": "8yOqDwfyjfMW"
       },
-      "execution_count": 46,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1418,9 +1418,9 @@
           "height": 17
         },
         "id": "oQ7h8rOd1H6o",
-        "outputId": "d6818872-6829-41ea-abbe-c2365ed2f485"
+        "outputId": "adbe9482-2a57-4149-ebeb-409118cf4cd6"
       },
-      "execution_count": 47,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1481,7 +1481,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_1b8b4619-b23a-4736-89ce-06e53146ae9c\", \"submission_final.csv\", 9803)"
+              "download(\"download_3954469a-1f3b-4817-80b7-b8ccc6e9e6f4\", \"submission_final.csv\", 9803)"
             ]
           },
           "metadata": {}
